--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
-    "graphql": "^0.13.1"
+    "graphql": "^0.13.1",
+    "lodash": "^4.17.5"
   },
   "devDependencies": {
     "eslint": "^4.18.2",
