--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.1",
-    "lodash": "^4.17.5"
+    "lodash": "^4.17.5",
+    "mongoose": "^5.0.12"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
