--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "graphql": "^0.13.2",
     "react": "^16.3.1",
     "react-apollo": "^2.1.3",
-    "react-dom": "^16.3.1"
+    "react-dom": "^16.3.1",
+    "styled-components": "^3.2.6"
   },
   "devDependencies": {
     "react-scripts": "1.1.4"
